parser.automaton
State 0:
main' -> . main [ # ]
-- On PROGRAM shift to state 1
-- On main shift to state 269

State 1:
main -> PROGRAM . IDENT br top_block CONTAINS br seq_subprogram END PROGRAM ident_or_blank eof [ # ]
main -> PROGRAM . IDENT br top_block END PROGRAM ident_or_blank eof [ # ]
-- On IDENT shift to state 2

State 2:
main -> PROGRAM IDENT . br top_block CONTAINS br seq_subprogram END PROGRAM ident_or_blank eof [ # ]
main -> PROGRAM IDENT . br top_block END PROGRAM ident_or_blank eof [ # ]
-- On BR shift to state 3
-- On br shift to state 5

State 3:
br -> BR . [ SUBROUTINE STOP SELECT RETURN REAL LOGICAL INTEGER INT IF IDENT GOTO GO FUNCTION END ELSE DOUBLE DO CONTAINS COMPLEX CASE CALL ]
br -> BR . br [ SUBROUTINE STOP SELECT RETURN REAL LOGICAL INTEGER INT IF IDENT GOTO GO FUNCTION END ELSE DOUBLE DO CONTAINS COMPLEX CASE CALL ]
-- On BR shift to state 3
-- On br shift to state 4
-- On SUBROUTINE reduce production br -> BR 
-- On STOP reduce production br -> BR 
-- On SELECT reduce production br -> BR 
-- On RETURN reduce production br -> BR 
-- On REAL reduce production br -> BR 
-- On LOGICAL reduce production br -> BR 
-- On INTEGER reduce production br -> BR 
-- On INT reduce production br -> BR 
-- On IF reduce production br -> BR 
-- On IDENT reduce production br -> BR 
-- On GOTO reduce production br -> BR 
-- On GO reduce production br -> BR 
-- On FUNCTION reduce production br -> BR 
-- On END reduce production br -> BR 
-- On ELSE reduce production br -> BR 
-- On DOUBLE reduce production br -> BR 
-- On DO reduce production br -> BR 
-- On CONTAINS reduce production br -> BR 
-- On COMPLEX reduce production br -> BR 
-- On CASE reduce production br -> BR 
-- On CALL reduce production br -> BR 

State 4:
br -> BR br . [ SUBROUTINE STOP SELECT RETURN REAL LOGICAL INTEGER INT IF IDENT GOTO GO FUNCTION END ELSE DOUBLE DO CONTAINS COMPLEX CASE CALL ]
-- On SUBROUTINE reduce production br -> BR br 
-- On STOP reduce production br -> BR br 
-- On SELECT reduce production br -> BR br 
-- On RETURN reduce production br -> BR br 
-- On REAL reduce production br -> BR br 
-- On LOGICAL reduce production br -> BR br 
-- On INTEGER reduce production br -> BR br 
-- On INT reduce production br -> BR br 
-- On IF reduce production br -> BR br 
-- On IDENT reduce production br -> BR br 
-- On GOTO reduce production br -> BR br 
-- On GO reduce production br -> BR br 
-- On FUNCTION reduce production br -> BR br 
-- On END reduce production br -> BR br 
-- On ELSE reduce production br -> BR br 
-- On DOUBLE reduce production br -> BR br 
-- On DO reduce production br -> BR br 
-- On CONTAINS reduce production br -> BR br 
-- On COMPLEX reduce production br -> BR br 
-- On CASE reduce production br -> BR br 
-- On CALL reduce production br -> BR br 

State 5:
main -> PROGRAM IDENT br . top_block CONTAINS br seq_subprogram END PROGRAM ident_or_blank eof [ # ]
main -> PROGRAM IDENT br . top_block END PROGRAM ident_or_blank eof [ # ]
-- On REAL shift to state 6
-- On LOGICAL shift to state 7
-- On INTEGER shift to state 8
-- On DOUBLE shift to state 9
-- On COMPLEX shift to state 11
-- On typ shift to state 12
-- On top_block shift to state 113
-- On seq_var shift to state 265
-- On decl_var shift to state 267
-- On STOP reduce production seq_var -> 
-- On SELECT reduce production seq_var -> 
-- On RETURN reduce production seq_var -> 
-- On INT reduce production seq_var -> 
-- On IF reduce production seq_var -> 
-- On IDENT reduce production seq_var -> 
-- On GOTO reduce production seq_var -> 
-- On GO reduce production seq_var -> 
-- On END reduce production seq_var -> 
-- On DO reduce production seq_var -> 
-- On CONTAINS reduce production seq_var -> 
-- On CALL reduce production seq_var -> 

State 6:
typ -> REAL . [ IDENT COMMA COLCOL ]
-- On IDENT reduce production typ -> REAL 
-- On COMMA reduce production typ -> REAL 
-- On COLCOL reduce production typ -> REAL 

State 7:
typ -> LOGICAL . [ IDENT COMMA COLCOL ]
-- On IDENT reduce production typ -> LOGICAL 
-- On COMMA reduce production typ -> LOGICAL 
-- On COLCOL reduce production typ -> LOGICAL 

State 8:
typ -> INTEGER . [ IDENT COMMA COLCOL ]
-- On IDENT reduce production typ -> INTEGER 
-- On COMMA reduce production typ -> INTEGER 
-- On COLCOL reduce production typ -> INTEGER 

State 9:
typ -> DOUBLE . PRECISION [ IDENT COMMA COLCOL ]
-- On PRECISION shift to state 10

State 10:
typ -> DOUBLE PRECISION . [ IDENT COMMA COLCOL ]
-- On IDENT reduce production typ -> DOUBLE PRECISION 
-- On COMMA reduce production typ -> DOUBLE PRECISION 
-- On COLCOL reduce production typ -> DOUBLE PRECISION 

State 11:
typ -> COMPLEX . [ IDENT COMMA COLCOL ]
-- On IDENT reduce production typ -> COMPLEX 
-- On COMMA reduce production typ -> COMPLEX 
-- On COLCOL reduce production typ -> COMPLEX 

State 12:
decl_var -> typ . opt_kind COLCOL seq_decl_assign br [ STOP SELECT RETURN REAL LOGICAL INTEGER INT IF IDENT GOTO GO END DOUBLE DO CONTAINS COMPLEX CALL ]
decl_var -> typ . seq_decl_assign br [ STOP SELECT RETURN REAL LOGICAL INTEGER INT IF IDENT GOTO GO END DOUBLE DO CONTAINS COMPLEX CALL ]
-- On IDENT shift to state 13
-- On COMMA shift to state 94
-- On seq_decl_assign shift to state 104
-- On opt_kind shift to state 106
-- On decl_assign shift to state 110
-- On COLCOL reduce production opt_kind -> 

State 13:
decl_assign -> IDENT . [ COMMA BR ]
decl_assign -> IDENT . EQ exp [ COMMA BR ]
decl_assign -> IDENT . LPAREN seq_adecl RPAREN [ COMMA BR ]
decl_assign -> IDENT . LPAREN seq_adecl RPAREN EQ exp [ COMMA BR ]
-- On LPAREN shift to state 14
-- On EQ shift to state 92
-- On COMMA reduce production decl_assign -> IDENT 
-- On BR reduce production decl_assign -> IDENT 

State 14:
decl_assign -> IDENT LPAREN . seq_adecl RPAREN [ COMMA BR ]
decl_assign -> IDENT LPAREN . seq_adecl RPAREN EQ exp [ COMMA BR ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On COLON shift to state 26
-- On COLCOL shift to state 65
-- On simple_exp shift to state 28
-- On seq_adecl shift to state 88
-- On logical shift to state 29
-- On exp shift to state 69
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
-- On adecl shift to state 74
-- On RPAREN reduce production seq_adecl -> 

State 15:
const -> TRUE . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production const -> TRUE 
-- On RPAREN reduce production const -> TRUE 
-- On RBRACE reduce production const -> TRUE 
-- On PLUS reduce production const -> TRUE 
-- On OR reduce production const -> TRUE 
-- On NEQV reduce production const -> TRUE 
-- On NEQ reduce production const -> TRUE 
-- On MUL reduce production const -> TRUE 
-- On MINUS reduce production const -> TRUE 
-- On LESS reduce production const -> TRUE 
-- On LEQ reduce production const -> TRUE 
-- On GREATER reduce production const -> TRUE 
-- On GEQ reduce production const -> TRUE 
-- On EQV reduce production const -> TRUE 
-- On EQEQ reduce production const -> TRUE 
-- On DIV reduce production const -> TRUE 
-- On COMMA reduce production const -> TRUE 
-- On COLON reduce production const -> TRUE 
-- On BR reduce production const -> TRUE 
-- On AND reduce production const -> TRUE 

State 16:
logical -> NOT . exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 87
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49

State 17:
exp -> MINUS . exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 86
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49

State 18:
exp -> LPAREN_S . seq_exp S_RPAREN [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On seq_exp shift to state 84
-- On logical shift to state 29
-- On exp shift to state 79
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
-- On S_RPAREN reduce production seq_exp -> 

State 19:
exp -> LPAREN . exp RPAREN [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 82
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49

State 20:
exp -> LBRACE . seq_exp RBRACE [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On seq_exp shift to state 77
-- On logical shift to state 29
-- On exp shift to state 79
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
-- On RBRACE reduce production seq_exp -> 

State 21:
const -> INT . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production const -> INT 
-- On RPAREN reduce production const -> INT 
-- On RBRACE reduce production const -> INT 
-- On PLUS reduce production const -> INT 
-- On OR reduce production const -> INT 
-- On NEQV reduce production const -> INT 
-- On NEQ reduce production const -> INT 
-- On MUL reduce production const -> INT 
-- On MINUS reduce production const -> INT 
-- On LESS reduce production const -> INT 
-- On LEQ reduce production const -> INT 
-- On GREATER reduce production const -> INT 
-- On GEQ reduce production const -> INT 
-- On EQV reduce production const -> INT 
-- On EQEQ reduce production const -> INT 
-- On DIV reduce production const -> INT 
-- On COMMA reduce production const -> INT 
-- On COLON reduce production const -> INT 
-- On BR reduce production const -> INT 
-- On AND reduce production const -> INT 

State 22:
exp -> IDENT . LPAREN seq_adecl RPAREN [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
simple_exp -> IDENT . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On LPAREN shift to state 23
-- On S_RPAREN reduce production simple_exp -> IDENT 
-- On RPAREN reduce production simple_exp -> IDENT 
-- On RBRACE reduce production simple_exp -> IDENT 
-- On PLUS reduce production simple_exp -> IDENT 
-- On OR reduce production simple_exp -> IDENT 
-- On NEQV reduce production simple_exp -> IDENT 
-- On NEQ reduce production simple_exp -> IDENT 
-- On MUL reduce production simple_exp -> IDENT 
-- On MINUS reduce production simple_exp -> IDENT 
-- On LESS reduce production simple_exp -> IDENT 
-- On LEQ reduce production simple_exp -> IDENT 
-- On GREATER reduce production simple_exp -> IDENT 
-- On GEQ reduce production simple_exp -> IDENT 
-- On EQV reduce production simple_exp -> IDENT 
-- On EQEQ reduce production simple_exp -> IDENT 
-- On DIV reduce production simple_exp -> IDENT 
-- On COMMA reduce production simple_exp -> IDENT 
-- On COLON reduce production simple_exp -> IDENT 
-- On BR reduce production simple_exp -> IDENT 
-- On AND reduce production simple_exp -> IDENT 

State 23:
exp -> IDENT LPAREN . seq_adecl RPAREN [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On COLON shift to state 26
-- On COLCOL shift to state 65
-- On simple_exp shift to state 28
-- On seq_adecl shift to state 67
-- On logical shift to state 29
-- On exp shift to state 69
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
-- On adecl shift to state 74
-- On RPAREN reduce production seq_adecl -> 

State 24:
const -> FLOAT . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production const -> FLOAT 
-- On RPAREN reduce production const -> FLOAT 
-- On RBRACE reduce production const -> FLOAT 
-- On PLUS reduce production const -> FLOAT 
-- On OR reduce production const -> FLOAT 
-- On NEQV reduce production const -> FLOAT 
-- On NEQ reduce production const -> FLOAT 
-- On MUL reduce production const -> FLOAT 
-- On MINUS reduce production const -> FLOAT 
-- On LESS reduce production const -> FLOAT 
-- On LEQ reduce production const -> FLOAT 
-- On GREATER reduce production const -> FLOAT 
-- On GEQ reduce production const -> FLOAT 
-- On EQV reduce production const -> FLOAT 
-- On EQEQ reduce production const -> FLOAT 
-- On DIV reduce production const -> FLOAT 
-- On COMMA reduce production const -> FLOAT 
-- On COLON reduce production const -> FLOAT 
-- On BR reduce production const -> FLOAT 
-- On AND reduce production const -> FLOAT 

State 25:
const -> FALSE . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production const -> FALSE 
-- On RPAREN reduce production const -> FALSE 
-- On RBRACE reduce production const -> FALSE 
-- On PLUS reduce production const -> FALSE 
-- On OR reduce production const -> FALSE 
-- On NEQV reduce production const -> FALSE 
-- On NEQ reduce production const -> FALSE 
-- On MUL reduce production const -> FALSE 
-- On MINUS reduce production const -> FALSE 
-- On LESS reduce production const -> FALSE 
-- On LEQ reduce production const -> FALSE 
-- On GREATER reduce production const -> FALSE 
-- On GEQ reduce production const -> FALSE 
-- On EQV reduce production const -> FALSE 
-- On EQEQ reduce production const -> FALSE 
-- On DIV reduce production const -> FALSE 
-- On COMMA reduce production const -> FALSE 
-- On COLON reduce production const -> FALSE 
-- On BR reduce production const -> FALSE 
-- On AND reduce production const -> FALSE 

State 26:
adecl -> COLON . [ RPAREN COMMA ]
adecl -> COLON . exp [ RPAREN COMMA ]
adecl -> COLON . exp COLON exp [ RPAREN COMMA ]
adecl -> COLON . COLON exp [ RPAREN COMMA ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On COLON shift to state 27
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 62
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
-- On RPAREN reduce production adecl -> COLON 
-- On COMMA reduce production adecl -> COLON 

State 27:
adecl -> COLON COLON . exp [ RPAREN COMMA ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 30
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49

State 28:
exp -> simple_exp . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production exp -> simple_exp 
-- On RPAREN reduce production exp -> simple_exp 
-- On RBRACE reduce production exp -> simple_exp 
-- On PLUS reduce production exp -> simple_exp 
-- On OR reduce production exp -> simple_exp 
-- On NEQV reduce production exp -> simple_exp 
-- On NEQ reduce production exp -> simple_exp 
-- On MUL reduce production exp -> simple_exp 
-- On MINUS reduce production exp -> simple_exp 
-- On LESS reduce production exp -> simple_exp 
-- On LEQ reduce production exp -> simple_exp 
-- On GREATER reduce production exp -> simple_exp 
-- On GEQ reduce production exp -> simple_exp 
-- On EQV reduce production exp -> simple_exp 
-- On EQEQ reduce production exp -> simple_exp 
-- On DIV reduce production exp -> simple_exp 
-- On COMMA reduce production exp -> simple_exp 
-- On COLON reduce production exp -> simple_exp 
-- On BR reduce production exp -> simple_exp 
-- On AND reduce production exp -> simple_exp 

State 29:
exp -> logical . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On S_RPAREN reduce production exp -> logical 
-- On RPAREN reduce production exp -> logical 
-- On RBRACE reduce production exp -> logical 
-- On PLUS reduce production exp -> logical 
-- On OR reduce production exp -> logical 
-- On NEQV reduce production exp -> logical 
-- On NEQ reduce production exp -> logical 
-- On MUL reduce production exp -> logical 
-- On MINUS reduce production exp -> logical 
-- On LESS reduce production exp -> logical 
-- On LEQ reduce production exp -> logical 
-- On GREATER reduce production exp -> logical 
-- On GEQ reduce production exp -> logical 
-- On EQV reduce production exp -> logical 
-- On EQEQ reduce production exp -> logical 
-- On DIV reduce production exp -> logical 
-- On COMMA reduce production exp -> logical 
-- On COLON reduce production exp -> logical 
-- On BR reduce production exp -> logical 
-- On AND reduce production exp -> logical 

State 30:
adecl -> COLON COLON exp . [ RPAREN COMMA ]
arith -> exp . PLUS exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
arith -> exp . MINUS exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
arith -> exp . MUL exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
arith -> exp . DIV exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . EQEQ exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . GREATER exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . GEQ exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . LESS exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . LEQ exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
comp -> exp . NEQ exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
logical -> exp . AND exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
logical -> exp . OR exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
logical -> exp . EQV exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
logical -> exp . NEQV exp [ RPAREN PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA AND ]
-- On PLUS shift to state 31
-- On OR shift to state 33
-- On NEQV shift to state 37
-- On NEQ shift to state 35
-- On MUL shift to state 41
-- On MINUS shift to state 58
-- On LESS shift to state 43
-- On LEQ shift to state 52
-- On GREATER shift to state 54
-- On GEQ shift to state 56
-- On EQV shift to state 45
-- On EQEQ shift to state 39
-- On DIV shift to state 60
-- On AND shift to state 50
-- On RPAREN reduce production adecl -> COLON COLON exp 
-- On COMMA reduce production adecl -> COLON COLON exp 

State 31:
arith -> exp PLUS . exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 32
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49

State 32:
arith -> exp . PLUS exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
arith -> exp PLUS exp . [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
arith -> exp . MINUS exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
arith -> exp . MUL exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
arith -> exp . DIV exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . EQEQ exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . GREATER exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . GEQ exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . LESS exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . LEQ exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
comp -> exp . NEQ exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
logical -> exp . AND exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
logical -> exp . OR exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
logical -> exp . EQV exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
logical -> exp . NEQV exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On OR shift to state 33
-- On NEQV shift to state 37
-- On NEQ shift to state 35
-- On MUL shift to state 41
-- On LESS shift to state 43
-- On LEQ shift to state 52
-- On GREATER shift to state 54
-- On GEQ shift to state 56
-- On EQV shift to state 45
-- On EQEQ shift to state 39
-- On DIV shift to state 60
-- On AND shift to state 50
-- On S_RPAREN reduce production arith -> exp PLUS exp 
-- On RPAREN reduce production arith -> exp PLUS exp 
-- On RBRACE reduce production arith -> exp PLUS exp 
-- On PLUS reduce production arith -> exp PLUS exp 
-- On NEQ reduce production arith -> exp PLUS exp 
-- On MINUS reduce production arith -> exp PLUS exp 
-- On EQEQ reduce production arith -> exp PLUS exp 
-- On COMMA reduce production arith -> exp PLUS exp 
-- On COLON reduce production arith -> exp PLUS exp 
-- On BR reduce production arith -> exp PLUS exp 
** Conflict on NEQ EQEQ

State 33:
logical -> exp OR . exp [ S_RPAREN RPAREN RBRACE PLUS OR NEQV NEQ MUL MINUS LESS LEQ GREATER GEQ EQV EQEQ DIV COMMA COLON BR AND ]
-- On TRUE shift to state 15
-- On NOT shift to state 16
-- On MINUS shift to state 17
-- On LPAREN_S shift to state 18
-- On LPAREN shift to state 19
-- On LBRACE shift to state 20
-- On INT shift to state 21
-- On IDENT shift to state 22
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On simple_exp shift to state 28
-- On logical shift to state 29
-- On exp shift to state 34
-- On const shift to state 47
-- On comp shift to state 48
-- On arith shift to state 49
